fixtures/invalid/commonjs-private-require/src/consumer/public.js
const producer = require("../producer/private");
export const consumerValue = producer.privateValue;
